# final-cmake-project

./: CMakeLists.txt  Doxyfile.in  main.cpp
.github/workflows/: ci.yml
docs/: README.md  how-it-works.md  mainpage.md
include/: example_class.h  palindrome.h  prime.h
src/: CMakeLists.txt  example_class.cpp  factorial.cpp  palindrome.cpp  prime.cpp
tests/: CMakeLists.txt  test_example_class.cpp  test_factorial.cpp  test_fibonacci.cpp  test_palindrome.cpp  test_prime.cpp
